# Smart-Resource-Scheduler

./: .gitignore  CMakeLists.txt  MakeFile
config/: gaming_profile.json  power_saving_profile.json  productivity_profile.json
docs/: Architecture_Overview.md  User_Manual.md
include/: common.cpp  common.h  constants.h  types.h
scripts/: build.sh  run_tests.sh
src/: main.cpp
src/core/: IPCManager.cpp  IPCManager.h  MemoryManager.cpp  MemoryManager.h  ProcessManager.cpp  ProcessManager.h  Scheduler.cpp  Scheduler.h  SystemMonitor.cpp  SystemMonitor.h
src/logging/: Logger.cpp  Logger.h  PerformanceTracker.cpp  PerformanceTracker.h
src/modes/: GamingMode.cpp  GamingMode.h  ModeManager.cpp  ModeManager.h  PowerSavingMode.cpp  PowerSavingMode.h  ProductivityMode.cpp  ProductivityMode.h
src/synchronization/: Semaphore.cpp  Semaphore.h  ThreadPool.cpp  ThreadPool.h
src/ui/: DashBoard.cpp  DashBoard.h
src/utils/: ConfigManager.cpp  ConfigManager.h  SystemUtils.cpp  SystemUtils.h
tests/: test_memory_manager.cpp  test_scheduler.cpp
